HUE-189. Ship with more elaborate desktop/conf/pseudo-distributed.ini (etc.)
Minor additions to hue.ini and pseudo-distributed.ini.tmpl
(cherry picked from commit dcc737c0aa53eb49ff8401196321d7d9adbe4016)

--- a/desktop/conf.dist/hue.ini
+++ b/desktop/conf.dist/hue.ini
@@ -125,7 +125,8 @@ hadoop_home=/usr/lib/hadoop-0.20
 # Enter the host and port on which you are running the Hadoop NameNode
 namenode_host=localhost
 hdfs_port=8020
-
+# Thrift plugin port for the name node
+## thrift_port=10090
 
 # Configuration for MapReduce JobTracker
 # ------------------------------------------------------------------------
@@ -134,3 +135,5 @@ hdfs_port=8020
 [[[default]]]
 # Enter the host on which you are running the Hadoop JobTracker
 jobtracker_host=localhost
+# Thrift plug-in port for the JobTracker
+## thrift_port=9290
