Add HueChart, HueChart.Area, .Box, .Line and corresponding package.yml changes

--- a/desktop/core/static/js/package.yml
+++ b/desktop/core/static/js/package.yml
@@ -29,6 +29,10 @@ sources: [
   Source/CCS/CCS.Desktop.Keys.js,
   Source/CCS/CCS.User.js,
   Source/CCS/CCS.Login.js,
+  Source/CCS/HueChart.js,
+  Source/CCS/HueChart.Box.js,
+  Source/CCS/HueChart.Area.js,
+  Source/CCS/HueChart.Line.js,
   Source/Forms/Form.Request.JSON.js,
   Source/Forms/EditInline.js,
   Source/UI/StickyWin.Drawer.js,
