--- a/desktop/core/static/js/package.yml
+++ b/desktop/core/static/js/package.yml
@@ -17,6 +17,7 @@ sources: [
   Source/Hue/Hue.Login.js,
   Source/Hue/Hue.Profiler.js,
   Source/Hue/Hue.Request.js,
+  Source/Hue/Hue.ShellPoller.js,
   Source/Hue/Hue.SolidWindow.js,
   Source/Hue/Hue.User.js,
   Source/Hue/HueChart.js,
@@ -32,6 +33,5 @@ sources: [
   Source/Native/String.Hue.js,
   Source/Native/Number.Files.js,
   Source/StaticThirdParty/DynamicTextarea.js,
-
 ]
 version: Unknown
