HUE-141: Adding python 2.4 support to Spawning. Also incorporating some feedback from previous code reviews and adding support for security.
Changing spawning so that it works on python 2.4. Needed to eliminate unnecessary use of with statement.
Responding to code reviews, cleaning up Spawning, adding tab completion.
Adding setuid wrapper and integrating into build.
Incorporating feedback from code reviews, and working on setuid wrapper.
Modifying setuid wrapper to correctly set supplementary group list, and putting in stubs for per-user shell configuration.
Removing tab completion support, because this requires a better thought out approach.
Adding code to acquire Hadoop delegation tokens as appropriate user and execute process.
Changing how delegation tokens are acquired so that the Hue webserver
acquires them for the shell subprocesses.
Working towards getting tempfiles to exist and be deleted in the
appropriate manner for delegation tokens for Hue Shell.
Fixing corner cases to get Hue Shell working with kerberized Hadoop.
Modifying Makefile so setuid binary for Shell app builds with "make apps".
Removing unnecessarily preserved environment variables from Shell.
Removing delegation_tokens_acquirer.py, since it's not needed.
Removing obsolete TODOs from Hue Shell.

--- a/apps/shell/conf/hue-shell.ini
+++ b/apps/shell/conf/hue-shell.ini
@@ -1,7 +1,9 @@
 #Configuration options for the Hue Shell app.
 
 [shell]
+#These are commented out so you know where to put lines like these if necessary.
 #shell_buffer_amount=100
+#shell_delegation_token_dir=/tmp/hue_delegation_tokens
 [[ shelltypes ]]
 [[[ calc ]]]
 nice_name = "Calculator"
@@ -13,11 +15,11 @@ nice_name = "Python Shell"
 short_name = "python"
 command = "python"
 help = "The Python interpreter"
-#[[[ pig ]]]
-#nice_name = "Pig Shell (Grunt)"
-#short_name = "pig"
-#command = "pig -l /dev/null"
-#help = "The command-line interpreter for Pig"
+[[[ pig ]]]
+nice_name = "Pig Shell (Grunt)"
+short_name = "pig"
+command = "pig -l /dev/null"
+help = "The command-line interpreter for Pig"
 #[[[ hbase ]]]
 #nice_name = "HBase Shell"
 #short_name = "hbase"
