Some cosmetic changes for Hue Shell.

--- a/apps/shell/conf/hue-shell.ini
+++ b/apps/shell/conf/hue-shell.ini
@@ -5,38 +5,18 @@
 #shell_buffer_amount=100
 #shell_delegation_token_dir=/tmp/hue_delegation_tokens
 [[ shelltypes ]]
-[[[ calc ]]]
-nice_name = "Calculator"
-short_name = "calc"
-command = "bc"
-help = "A command-line calculator"
-[[[ python ]]]
-nice_name = "Python Shell"
-short_name = "python"
-command = "python"
-help = "The Python interpreter"
 [[[ pig ]]]
 nice_name = "Pig Shell (Grunt)"
 short_name = "pig"
 command = "pig -l /dev/null"
 help = "The command-line interpreter for Pig"
-#[[[ hbase ]]]
-#nice_name = "HBase Shell"
-#short_name = "hbase"
-#command = "hbase shell"
-#help = "The command-line HBase client interface."
-#[[[ flume ]]]
-#nice_name = "Flume Shell"
-#short_name = "flume"
-#command = "flume shell"
-#help = "The command-line Flume client interface."
-#[[[ zookeeper ]]]
-#nice_name = "ZooKeeper Shell"
-#short_name = "zookeeper"
-#command = "zkCli.sh"
-#help = "The command-line Zookeeper client interface."
-#[[[ bash ]]]
-#nice_name = "Bash"
-#short_name = "bash"
-#command = "bash"
-#help = "The Bourne-Again Shell"
+[[[ hbase ]]]
+nice_name = "HBase Shell"
+short_name = "hbase"
+command = "hbase shell"
+help = "The command-line HBase client interface."
+[[[ flume ]]]
+nice_name = "Flume Shell"
+short_name = "flume"
+command = "flume shell"
+help = "The command-line Flume client interface."
