Adding a management command and a config option to allow for easily switching Hue webserver.

--- a/desktop/conf.dist/hue.ini
+++ b/desktop/conf.dist/hue.ini
@@ -33,13 +33,18 @@ django_debug_mode=0
 # Turn off backtrace for server error
 http_500_debug_mode=0
 
+# Set to true to use CherryPy as the webserver, set to false
+# to use Spawning as the webserver. Defaults to Spawning if
+# key is not specified.
+## use_cherrypy_server = false
+
 # Webserver runs as this user
 ## server_user=hue
 ## server_group=hue
 
-# If set to false, runcpserver will not actually start the web server.
+# If set to false, runserver will not actually start the web server.
 # Used if Apache is being used as a WSGI container.
-## enable_cherrypy_server=yes
+## enable_server=yes
 
 # Number of threads used by the CherryPy web server
 ## cherrypy_server_threads=10
